# BrookFile

./: .gitignore  AGENTS.md  README.md  README_EN.md  api.md  build.py  database.md
api/: auth.md  backup.md  file.md  notebook.md  recycle.md  restore.md  share.md  system.md  user.md  vault.md  webdav.md
backend/: Cargo.toml  build.rs
backend/src/: app_state.rs  config.rs  database.rs  error_logger.rs  main.rs  routes.rs  session_manager.rs  static_files.rs
backend/src/backup/: manager.rs  mod.rs  scheduler.rs  task.rs
backend/src/handlers/: auth.rs  backup.rs  compress.rs  file.rs  init.rs  mod.rs  notebook.rs  recycle.rs  response.rs  restore.rs  security.rs  share.rs  system.rs  upload.rs  user.rs  vault.rs  webdav.rs  webdav_protocol.rs
backend/src/middleware/: auth.rs  mod.rs  session.rs
backend/src/models/: backup_rule.rs  mod.rs  notebook.rs  recycle_bin.rs  share.rs  system_config.rs  upload_cache.rs  user.rs  vault.rs  webdav_config.rs
backend/src/restore/: manager.rs  mod.rs  task.rs
backend/src/search/: manager.rs
backend/src/storage/: encrypt.rs  mod.rs  webdav.rs
database/: backup.md  file.md  notebook.md  sessions.md  share.md  system.md  user.md  vault.md  webdav.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
tests/: common.py  run_all.py
tests/backend/: mock_webdav_server.py  test_auth_api.py  test_backup_api.py  test_backup_restore_api.py  test_backup_restore_error.py  test_compress_api.py  test_file_api.py  test_notebook_api.py  test_recycle_api.py  (+8 more)
(+48 files in other folders)
