[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
pbkdf2 = "0.12"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
futures-util = "0.3"
futures-lite = "2"
zip = "0.6"
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
flate2 = "1.0"
crc32fast = "1.4"
tokio-util = { version = "0.7", features = ["rt", "io"] }
futures = "0.3"
walkdir = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2.1"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
base64 = "0.22"
async-stream = "0.3"
aes = "0.8"
cbc = "0.1"
jieba-rs = "0.7"
rust-embed = "8"
md-5 = "0.10"
quick-xml = "0.37"

[[bin]]
name = "backend"
path = "src/main.rs"
